[package]
name = "simple_rustls_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cert-manager = "0.0.10"
env_logger = "0.10.0"
hyper = "1.2.0"
hyper-rustls = "0.27.0"
log = "0.4.19"
random-manager = "0.0.5"
rcgen = "0.12.1"
rustls = { version = "0.23.3", features = ["logging"] }
rustls-native-certs = "0.7.0"
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
webpki-roots = "0.26.1"
